--- a/render.yaml
+++ b/render.yaml
@@ -17,6 +17,6 @@ services:
       - key: DATABASE_URL
         fromDatabase:
           name: progressly-db # Important: Change this!
-          property: internalConnectionString
+          property: connectionString
       - key: CLERK_SECRET_KEY
         sync: false
