feat: Update PWA manifest and icons

--- a/progressly/public/manifesto.json
+++ b/progressly/public/manifesto.json
@@ -4,7 +4,7 @@
   "description": "The luxury productivity app.",
   "start_url": "/",
   "display": "standalone",
-  "background_color": "#ffffff",
+  "background_color": "#000000",
   "theme_color": "#000000",
   "icons": [
     {
@@ -18,11 +18,6 @@
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any maskable"
-    },
-    {
-      "src": "/apple-icon.png",
-      "sizes": "180x180",
-      "type": "image/png"
     }
   ]
 }
