--- a/progressly/src/app/manifest.json
+++ b/progressly/src/app/manifest.json
@@ -15,7 +15,7 @@
       "purpose": "maskable"
     }
   ],
-  "theme_color": "#ffffff",
+  "theme_color": "#fff7f7",
   "background_color": "#000000",
   "display": "standalone"
 }
