--- a/progressly/package.json
+++ b/progressly/package.json
@@ -12,6 +12,7 @@
     "@clerk/nextjs": "^6.31.4",
     "@ducanh2912/next-pwa": "^10.2.9",
     "@radix-ui/react-collapsible": "^1.1.12",
+    "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.3",
