--- a/progressly/package.json
+++ b/progressly/package.json
@@ -30,7 +30,8 @@
     "react-type-animation": "^3.2.0",
     "recharts": "^3.1.2",
     "tailwind-merge": "^3.3.1",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "workbox-window": "^7.3.0"
   },
   "devDependencies": {
     "@types/node": "^20",
