FIxed the PWA 11:53

--- a/progressly/public/manifest.json
+++ b/progressly/public/manifest.json
@@ -1,7 +1,7 @@
 {
-  "name": "Progressly",
+  "name": "Progressly - The Luxury Productivity App",
   "short_name": "Progressly",
-  "description": "The luxury productivity app.",
+  "description": "The luxury productivity app for tracking your daily activities and goals.",
   "start_url": "/",
   "display": "standalone",
   "background_color": "#000000",
@@ -9,7 +9,8 @@
   "orientation": "portrait-primary",
   "scope": "/",
   "lang": "en",
-  "categories": ["productivity", "lifestyle"],
+  "categories": ["productivity", "lifestyle", "utilities"],
+  "prefer_related_applications": false,
   "icons": [
     {
       "src": "/web-app-manifest-192x192.png",
@@ -22,6 +23,18 @@
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any maskable"
+    },
+    {
+      "src": "/web-app-manifest-192x192.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "maskable"
+    },
+    {
+      "src": "/web-app-manifest-512x512.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "maskable"
     }
   ]
 }
