--- a/progressly/package.json
+++ b/progressly/package.json
@@ -22,6 +22,8 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "dexie": "^4.2.0",
+    "dexie-react-hooks": "^4.2.0",
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.540.0",
     "next": "^15.5.0",
