--- a/progressly-api/alembic.ini
+++ b/progressly-api/alembic.ini
@@ -84,7 +84,9 @@ path_separator = os
 # database URL.  This is consumed by the user-maintained env.py script only.
 # other means of configuring database URLs may be customized within the env.py
 # file.
-sqlalchemy.url = postgresql://progressly_db_user:Ibjri9xwrTOEQr7T5uPh7T7OwbdD9YZ9@dpg-d2k3d63uibrs73eeedf0-a.singapore-postgres.render.com/progressly_db
+sqlalchemy.url = postgresql://postgres.fwhtczpzynuigqtffqgm:mcO9tCHktqwnCfNL@aws-0-ap-southeast-1.pooler.supabase.com:6543/postgres
+
+                  
 
 
 [post_write_hooks]
