--- a/progressly/package.json
+++ b/progressly/package.json
@@ -9,8 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@clerk/nextjs": "^6.31.4",
     "@ducanh2912/next-pwa": "^10.2.9",
+    "@hookform/resolvers": "^5.2.2",
     "@radix-ui/react-collapsible": "^1.1.12",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-label": "^2.1.7",
@@ -19,26 +19,39 @@
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-toast": "^1.2.15",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "@supabase/auth-helpers-nextjs": "^0.10.0",
+    "@supabase/auth-helpers-react": "^0.5.0",
+    "@supabase/auth-ui-react": "^0.4.7",
+    "@supabase/auth-ui-shared": "^0.1.8",
+    "@supabase/supabase-js": "^2.75.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "dexie": "^4.2.0",
-    "framer-motion": "^12.23.12",
+    "framer-motion": "^12.23.24",
     "lucide-react": "^0.540.0",
     "next": "^15.5.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.64.0",
+    "react-markdown": "^10.1.0",
+    "react-textarea-autosize": "^8.5.9",
     "react-type-animation": "^3.2.0",
     "recharts": "^3.1.2",
+    "swr": "^2.3.6",
     "tailwind-merge": "^3.3.1",
     "tailwind-scrollbar": "^3.1.0",
     "tailwindcss-animate": "^1.0.7",
-    "workbox-window": "^7.3.0"
+    "uuid": "^13.0.0",
+    "workbox-window": "^7.3.0",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/uuid": "^10.0.0",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "postcss": "^8",
