--- a/progressly/package.json
+++ b/progressly/package.json
@@ -41,6 +41,7 @@
     "recharts": "^3.1.2",
     "swr": "^2.3.6",
     "tailwind-merge": "^3.3.1",
+    "@radix-ui/react-alert-dialog": "^1.1.15",
     "tailwind-scrollbar": "^3.1.0",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^13.0.0",
