--- a/progressly/package.json
+++ b/progressly/package.json
@@ -43,6 +43,7 @@
     "tailwind-merge": "^3.3.1",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-popover": "^1.1.15",
+    "@radix-ui/react-toggle-group": "^1.1.15",
     "tailwind-scrollbar": "^3.1.0",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^13.0.0",
